--- a/view/frontend/templates/email_items.phtml
+++ b/view/frontend/templates/email_items.phtml
@@ -26,7 +26,7 @@ $encryptor  = $objectManager->get('Magento\Framework\Encryption\EncryptorInterfa
 $storeManager = $objectManager->get('\Magento\Store\Model\StoreManagerInterface');
 $baseUrl = $storeManager->getStore()->getBaseUrl();
 ?>
-<p><?php echo "Hi, ".$customer_firstname; ?></p>
+<p style="margin-bottom: 25px;"><?php echo "Hi, <b>".$customer_firstname; ?></b></p>
 
 <table width="400">
 
@@ -51,16 +51,16 @@ foreach ($items as $item) {
 							 <tr>
 							 
 							  <td><a target="_blank" href="<?php echo $ProductUrl; ?>"><img src="<?php echo $product_image_url;?>"></a>
-							  <br/>
-							   <a href="<?php echo $ProductUrl."?rating=1&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
+						  	 </td>
+								<td> </td>
+								<td style="text-align: center; padding:0 0 0 5px;vertical-align:top;line-height:17.5px;font-size:17px;font-weight:bold;"><p style="margin-top: 0;margin-bottom: 10px;text-align: left;padding-left: 26%;"><?php echo $product_name; ?></p>
+								<p style="    margin-left: 38px;margin-top: 0;margin-bottom: 5px;font-size: 11px;font-weight: 400;">Start by rating this product.</p>
+								<a href="<?php echo $ProductUrl."?rating=1&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
 								<a href="<?php echo $ProductUrl."?rating=2&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
 								<a href="<?php echo $ProductUrl."?rating=3&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
 								<a href="<?php echo $ProductUrl."?rating=4&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
 								<a href="<?php echo $ProductUrl."?rating=5&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
-							  
-							  </td>
-							 
-							  <td style="text-align: center; padding:0 0 0 10px;vertical-align:top;line-height:17.5px;font-size:11px;font-weight:300;"><?php echo $product_name; ?></td>
+								</td>
 							 
 							 </tr>
 							 
@@ -76,12 +76,14 @@ foreach ($items as $item) {
 ?>
 
 </tbody>
+</table>
+<table width="400">
 <h2 style="font-size:16px;font-weight:600;text-transform:uppercase;line-height:23px">Please share your feedback with us</h2>
 							<p>Based on your experience with the product above, how likely are you to recommend <span class="il">Myntra</span> to a friend or colleague? 
 							</p>
 							<br/>
 							<br/>
-<table>
+
     <tr>
         <td style="background-color: #4ecdc4;border-color: #4c5764;border: 2px solid #45b7af;padding: 10px;text-align: center;">
             <a style="display: block;color: #ffffff;font-size: 12px;text-decoration: none;text-transform: uppercase;" href="<?php echo $baseUrl; ?>/reminder/product/unsubscribe/?id=<?php echo $customer_id;?>">
@@ -92,4 +94,3 @@ foreach ($items as $item) {
 </table>
 
 						
-</table>
