--- a/view/frontend/templates/review/form.phtml
+++ b/view/frontend/templates/review/form.phtml
@@ -139,8 +139,19 @@ $rating = $_GET['rating'];
 		<script>
 		require(['jquery', 'jquery/ui'], function($){
 		  jQuery(document).ready( function() {
+		      setTimeout(function(){
 				var rating = "<?php echo $rating ?>";
-				jQuery("#Produktbetyg"+rating+"_label").click();
+				
+				jQuery("#tab-label-reviews-title").click();
+				
+				$('html, body').animate({
+                         scrollTop: $("#tab-label-reviews-title").offset().top
+                }, 1000);
+				jQuery("#Produktbetyg_"+rating+"_label").click();
+			
+				
+		      }, 1000);	
+				
 			
 		  });
 		});
