--- a/view/frontend/templates/email_items.phtml
+++ b/view/frontend/templates/email_items.phtml
@@ -11,22 +11,19 @@
 <?php $order = $block->getOrder() ?>
 
 <?php 
-
-
 $customer_email = $order->getCustomerEmail();
-//$encrypted_customer_email = encrypt($customer_email, "!@#$%^&*");
-
 $customer_id = $order->getCustomerId();
 $customer_firstname = $order->getCustomerFirstname(); 
 $objectManager = \Magento\Framework\App\ObjectManager::getInstance();
-$imagewidth=180;
-$imageheight=180;
+$imagewidth=200;
+$imageheight=200;
 $imageHelper  = $objectManager->get('\Magento\Catalog\Helper\Image');
 $encryptor  = $objectManager->get('Magento\Framework\Encryption\EncryptorInterface');
 $storeManager = $objectManager->get('\Magento\Store\Model\StoreManagerInterface');
 $baseUrl = $storeManager->getStore()->getBaseUrl();
 ?>
-<p style="margin-bottom: 25px;"><?php echo "Hi, <b>".$customer_firstname; ?></b></p>
+<p style="margin-bottom: 15px;"><?php echo "Hi, <b>".$customer_firstname; ?></b></p>
+<?php echo $block->getLayout()->createBlock('Magento\Cms\Block\Block')->setBlockId('product_review_reminder_top')->toHtml();?>
 
 <table width="400">
 
@@ -36,40 +33,28 @@ $baseUrl = $storeManager->getStore()->getBaseUrl();
 
 foreach ($items as $item) {
 						
-							$id = $item->getOrderItem()->getProductId();
-							
-							
+							$id = $item->getOrderItem()->getProductId();						
 							$product_name = $item->getOrderItem()->getName();
 							
 							$product = $objectManager->create('Magento\Catalog\Model\Product')->load($id);					 					 
 							$product_image_url = $imageHelper->init($product, 'product_page_image_small')->setImageFile($product->getFile())->resize($imagewidth, $imageheight)->getUrl();
 							$ProductUrl = $product->getProductUrl();
-							?>
-							
-							
-							
+							?>						
 							 <tr>
 							 
 							  <td><a target="_blank" href="<?php echo $ProductUrl; ?>"><img src="<?php echo $product_image_url;?>"></a>
 						  	 </td>
 								<td> </td>
-								<td style="text-align: center; padding:0 0 0 5px;vertical-align:top;line-height:17.5px;font-size:17px;font-weight:bold;"><p style="margin-top: 0;margin-bottom: 10px;text-align: left;padding-left: 26%;"><?php echo $product_name; ?></p>
-								<p style="    margin-left: 38px;margin-top: 0;margin-bottom: 5px;font-size: 11px;font-weight: 400;">Start by rating this product.</p>
-								<a href="<?php echo $ProductUrl."?rating=1&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
-								<a href="<?php echo $ProductUrl."?rating=2&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
-								<a href="<?php echo $ProductUrl."?rating=3&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
-								<a href="<?php echo $ProductUrl."?rating=4&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
-								<a href="<?php echo $ProductUrl."?rating=5&email=".$customer_email; ?>"><img style="width: 8%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
+								<td style="padding-top: 13% !important;text-align: center; padding:0 0 0 5px;vertical-align:top;line-height:17.5px;font-size:17px;font-weight:bold;"><p style="margin-top: 0;margin-bottom: 10px;text-align: left;padding-left: 21%;"><?php echo $product_name; ?></p>
+								<p style="    margin-left: 20px;margin-top: 0;margin-bottom: 5px;font-size: 11px;font-weight: 400;"> <?php echo __('Start by rating this product.');?></p>
+								<a href="<?php echo $ProductUrl."?rating=1&email=".$customer_email; ?>"><img style="width: 10%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
+								<a href="<?php echo $ProductUrl."?rating=2&email=".$customer_email; ?>"><img style="width: 10%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
+								<a href="<?php echo $ProductUrl."?rating=3&email=".$customer_email; ?>"><img style="width: 10%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
+								<a href="<?php echo $ProductUrl."?rating=4&email=".$customer_email; ?>"><img style="width: 10%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
+								<a href="<?php echo $ProductUrl."?rating=5&email=".$customer_email; ?>"><img style="width: 10%;" src="<?php echo $this->getViewFileUrl('Review_Reminder::images/star.png'); ?>" /></a>
 								</td>
 							 
-							 </tr>
-							 
-														 
-							 
-							
-						
-						
-						
+							 </tr>				
 					<?php	 
 																		
 					}
@@ -77,20 +62,17 @@ foreach ($items as $item) {
 
 </tbody>
 </table>
-<table width="400">
-<h2 style="font-size:16px;font-weight:600;text-transform:uppercase;line-height:23px">Please share your feedback with us</h2>
-							<p>Based on your experience with the product above, how likely are you to recommend <span class="il">faltbutiken</span> to a friend or colleague? 
-							</p>
-							<br/>
-							<br/>
-
-    <tr>
-        <td style="background-color: #4ecdc4;border-color: #4c5764;border: 2px solid #45b7af;padding: 10px;text-align: center;">
+<table width="700">
+<?php echo $block->getLayout()->createBlock('Magento\Cms\Block\Block')->setBlockId('product_review_reminder_bottom')->toHtml();?> 
+</table>
+<table align="center;" width:100px;>
+     <tr>
+        <td style="background-color: #53b53d;border-color: #53b53d;border: 2px solid #53b53d;padding: 10px;text-align: center;">
             <a style="display: block;color: #ffffff;font-size: 12px;text-decoration: none;text-transform: uppercase;" href="<?php echo $baseUrl; ?>/reminder/product/unsubscribe/?id=<?php echo $customer_id;?>">
-                Unsubscribe
+                <?php echo __('Unsubscribe');?>
             </a>
         </td>
     </tr>
-</table>
+    </table>
 
 						
